--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -78,6 +78,6 @@
   <script src="scripts/blogArticles.js"></script>
   <script src="scripts/article.js"></script>
   <!-- TODO: Link our new script file in. -->
-  <script src="scripts/articleVeiw.js"></script>
+  <script src="scripts/articleView.js"></script>
 </body>
 </html>
