Added handler for author selector
Displays articles that match selected author so users can filter through articles easier.
displays all authors if none are selected

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -78,6 +78,6 @@
   <script src="scripts/blogArticles.js"></script>
   <script src="scripts/article.js"></script>
   <script src="scripts/articleView.js"></script>
-  <!-- TODO: Link our new script file in. -->
+  <!-- (DONE!!!!!!!!!) -->
 </body>
 </html>
